--- a/SUBSEQUENCE/.project
+++ b/SUBSEQUENCE/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>LongestSubsequence</name>
+	<name>SUBSEQUENCE</name>
 	<comment></comment>
 	<projects>
 	</projects>
