--- a/phase-2/Firstproject/src/main/webapp/WEB-INF/web.xml
+++ b/phase-2/Firstproject/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
-  <display-name>FirstProject</display-name>
+  <display-name>Firstproject</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.jsp</welcome-file>
@@ -9,4 +9,22 @@
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
+  
+  <servlet>
+    <servlet-name>s1</servlet-name>
+    <servlet-class>com.simplilearn.demo.ServletOne</servlet-class>
+    </servlet>
+    <servlet-mapping>
+       <servlet-name>s1</servlet-name>
+       <url-pattern>/first</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+    <servlet-name>s2</servlet-name>
+    <servlet-class>com.simplilearn.demo.LoginServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+       <servlet-name>s2</servlet-name>
+       <url-pattern>/login</url-pattern>
+    </servlet-mapping>  
 </web-app>
